{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 2114,
  "lineage": "373e5f53-d662-8199-dcb2-b844284d1aa8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-app-lb/frontendIPConfigurations/app-lb-private-ip",
                "name": "app-lb-private-ip",
                "private_ip_address": "10.0.11.241",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-app-subnet"
              }
            ],
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-app-lb",
            "location": "eastus",
            "name": "SAP-dev-app-lb",
            "private_ip_address": "10.0.11.241",
            "private_ip_addresses": [
              "10.0.11.241"
            ],
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.app-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-web-lb/frontendIPConfigurations/web-lb-pip",
                "name": "web-lb-pip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/publicIPAddresses/SAP-dev-webvm-pip"
              }
            ],
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-web-lb",
            "location": "eastus",
            "name": "SAP-dev-web-lb",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.web_slbip",
            "azurerm_resource_group.rg",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "app_lb_backend_address_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-app-lb/backendAddressPools/app-backend",
            "loadbalancer_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-app-lb",
            "name": "app-backend"
          },
          "dependencies": [
            "azurerm_lb.app_lb",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web-lb-pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-web-lb/backendAddressPools/web-backed",
            "loadbalancer_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-web-lb",
            "name": "web-backed"
          },
          "dependencies": [
            "azurerm_lb.web-lb",
            "azurerm_public_ip.web_slbip",
            "azurerm_resource_group.rg",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "app_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-app-lb/probes/tcp-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-app-lb",
            "name": "tcp-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.app_lb",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-web-lb/probes/tcp-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-web-lb",
            "name": "tcp-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web-lb",
            "azurerm_public_ip.web_slbip",
            "azurerm_resource_group.rg",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "app_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-app-lb/backendAddressPools/app-backend"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-app-lb/frontendIPConfigurations/app-lb-private-ip",
            "frontend_ip_configuration_name": "app-lb-private-ip",
            "frontend_port": 80,
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-app-lb/loadBalancingRules/app-lb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-app-lb",
            "name": "app-lb-rule",
            "probe_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-app-lb/probes/tcp-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.app_lb",
            "azurerm_lb_backend_address_pool.app_lb_backend_address_pool",
            "azurerm_lb_probe.app_lb_probe",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_lb_rule_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-web-lb/backendAddressPools/web-backed"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-web-lb/frontendIPConfigurations/web-lb-pip",
            "frontend_ip_configuration_name": "web-lb-pip",
            "frontend_port": 80,
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-web-lb/loadBalancingRules/web-slb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-web-lb",
            "name": "web-slb-rule",
            "probe_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/loadBalancers/SAP-dev-web-lb/probes/tcp-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web-lb",
            "azurerm_lb_backend_address_pool.web-lb-pool",
            "azurerm_lb_probe.web_lb_probe",
            "azurerm_public_ip.web_slbip",
            "azurerm_resource_group.rg",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/natGateways/app-natgw",
            "idle_timeout_in_minutes": 4,
            "location": "eastus",
            "name": "app-natgw",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "resource_guid": "4a7943e8-5c88-4168-a6c5-b7c91eb8f29b",
            "sku_name": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "natgw_pip_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/natGateways/app-natgw|/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/publicIPAddresses/SAP-dev-natgw-pip",
            "nat_gateway_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/natGateways/app-natgw",
            "public_ip_address_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/publicIPAddresses/SAP-dev-natgw-pip"
          },
          "dependencies": [
            "azurerm_nat_gateway.natgw",
            "azurerm_public_ip.natgw_pip",
            "azurerm_resource_group.rg",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_host_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkInterfaces/SAP-dev-bastion-linuxvm-nic",
            "internal_domain_name_suffix": "tn2kvgyeeaqezhyazkv4botlue.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "bastion-host-ip-1",
                "primary": true,
                "private_ip_address": "10.0.100.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/publicIPAddresses/SAP-dev-bastion-host-pip",
                "subnet_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-bastion-subnet"
              }
            ],
            "location": "eastus",
            "name": "SAP-dev-bastion-linuxvm-nic",
            "private_ip_address": "10.0.100.4",
            "private_ip_addresses": [
              "10.0.100.4"
            ],
            "resource_group_name": "SAP-dev-RG-ljhddxea"
          },
          "dependencies": [
            "azurerm_public_ip.bastion_host_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastion-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_linux_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkInterfaces/SAP-dev-web-linux-nic-0",
            "internal_domain_name_suffix": "tn2kvgyeeaqezhyazkv4botlue.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuix-nic1",
                "primary": true,
                "private_ip_address": "10.0.1.12",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-web-subnet"
              }
            ],
            "location": "eastus",
            "name": "SAP-dev-web-linux-nic-0",
            "private_ip_address": "10.0.1.12",
            "private_ip_addresses": [
              "10.0.1.12"
            ],
            "resource_group_name": "SAP-dev-RG-ljhddxea"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.web-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkInterfaces/SAP-dev-web-linux-nic-1",
            "internal_domain_name_suffix": "tn2kvgyeeaqezhyazkv4botlue.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuix-nic1",
                "primary": true,
                "private_ip_address": "10.0.1.13",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-web-subnet"
              }
            ],
            "location": "eastus",
            "name": "SAP-dev-web-linux-nic-1",
            "private_ip_address": "10.0.1.13",
            "private_ip_addresses": [
              "10.0.1.13"
            ],
            "resource_group_name": "SAP-dev-RG-ljhddxea"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.web-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkInterfaces/SAP-dev-web-linux-nic-2",
            "internal_domain_name_suffix": "tn2kvgyeeaqezhyazkv4botlue.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-linuix-nic1",
                "primary": true,
                "private_ip_address": "10.0.1.11",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-web-subnet"
              }
            ],
            "location": "eastus",
            "name": "SAP-dev-web-linux-nic-2",
            "private_ip_address": "10.0.1.11",
            "private_ip_addresses": [
              "10.0.1.11"
            ],
            "resource_group_name": "SAP-dev-RG-ljhddxea"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.web-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-app-subnet-nsg",
            "location": "eastus",
            "name": "SAP-dev-vnet-app-subnet-nsg",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.app-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_vmss_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/app-vmss-nsg",
            "location": "eastus",
            "name": "app-vmss-nsg",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "security_rule": [
              {
                "access": "Allow",
                "description": "inbound rule 0",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "IB-RL-0",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "inbound rule 1",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "IB-RL-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "inbound rule 2",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "IB-RL-2",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-bastion-subnet-nsg",
            "location": "eastus",
            "name": "SAP-dev-vnet-bastion-subnet-nsg",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastion-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-db-subnet-nsg",
            "location": "eastus",
            "name": "SAP-dev-vnet-db-subnet-nsg",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.db-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-web-subnet-nsg",
            "location": "eastus",
            "name": "SAP-dev-vnet-web-subnet-nsg",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.web-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_vmss_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-web-vmss-nsg",
            "location": "eastus",
            "name": "SAP-dev-web-vmss-nsg",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Inbound Rule 0",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-rule-0",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Inbound Rule 1",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Inbound Rule 2",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-rule-2",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_subnet_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-app-subnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "SAP-dev-vnet-app-subnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-app-subnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "SAP-dev-vnet-app-subnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-app-subnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "SAP-dev-vnet-app-subnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-app-subnet-nsg/securityRules/Rule-Port-8080",
            "name": "Rule-Port-8080",
            "network_security_group_name": "SAP-dev-vnet-app-subnet-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_subnet_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-bastion-subnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "SAP-dev-vnet-bastion-subnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastion-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-bastion-subnet-nsg/securityRules/Rule-Port-3389",
            "name": "Rule-Port-3389",
            "network_security_group_name": "SAP-dev-vnet-bastion-subnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastion-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db_subnet_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3306",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-db-subnet-nsg/securityRules/Rule-Port-3306",
            "name": "Rule-Port-3306",
            "network_security_group_name": "SAP-dev-vnet-db-subnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.db-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1433",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-db-subnet-nsg/securityRules/Rule-Port-1433",
            "name": "Rule-Port-1433",
            "network_security_group_name": "SAP-dev-vnet-db-subnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.db-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-db-subnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "SAP-dev-vnet-db-subnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.db-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "5432",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-db-subnet-nsg/securityRules/Rule-Port-5432",
            "name": "Rule-Port-5432",
            "network_security_group_name": "SAP-dev-vnet-db-subnet-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.db-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_subnet_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-web-subnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "SAP-dev-vnet-web-subnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-web-subnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "SAP-dev-vnet-web-subnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-web-subnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "SAP-dev-vnet-web-subnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_host_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/publicIPAddresses/SAP-dev-bastion-host-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.147.200.154",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "SAP-dev-bastion-host-pip",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_svc_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/publicIPAddresses/SAP-dev-bastion-svc-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.228.130.236",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "SAP-dev-bastion-svc-pip",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "natgw_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/publicIPAddresses/SAP-dev-natgw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.147.200.152",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "SAP-dev-natgw-pip",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_slbip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/publicIPAddresses/SAP-dev-webvm-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.173.163.10",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "SAP-dev-webvm-pip",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "envirnoment": "dev",
              "owners": "SAP"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-app-subnet",
            "name": "SAP-dev-vnet-app-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "virtual_network_name": "SAP-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-bastion-subnet",
            "name": "SAP-dev-vnet-bastion-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "virtual_network_name": "SAP-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion_service_snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.101.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "virtual_network_name": "SAP-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.21.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-db-subnet",
            "name": "SAP-dev-vnet-db-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "virtual_network_name": "SAP-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-web-subnet",
            "name": "SAP-dev-vnet-web-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "virtual_network_name": "SAP-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "natgw_appsubnet_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-app-subnet",
            "nat_gateway_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/natGateways/app-natgw",
            "subnet_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-app-subnet"
          },
          "dependencies": [
            "azurerm_nat_gateway.natgw",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app-subnet-nsg-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-app-subnet",
            "network_security_group_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-app-subnet-nsg",
            "subnet_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-app-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app-nsg",
            "azurerm_network_security_rule.app_subnet_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion-subnet-nsg-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-bastion-subnet",
            "network_security_group_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-bastion-subnet-nsg",
            "subnet_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-bastion-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion-nsg",
            "azurerm_network_security_rule.bastion_subnet_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastion-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db-subnet-nsg-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-db-subnet",
            "network_security_group_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-db-subnet-nsg",
            "subnet_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-db-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.db-nsg",
            "azurerm_network_security_rule.db_subnet_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.db-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web-subnet-nsg-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-web-subnet",
            "network_security_group_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/networkSecurityGroups/SAP-dev-vnet-web-subnet-nsg",
            "subnet_id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet/subnets/SAP-dev-vnet-web-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web-nsg",
            "azurerm_network_security_rule.web_subnet_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web-subnet",
            "azurerm_virtual_network.my-vnet1",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "my-vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9baa789b-2004-4c20-9f00-caabe0ba6ba4",
            "id": "/subscriptions/57498e65-d4a7-4935-b48b-a46c85d91999/resourceGroups/SAP-dev-RG-ljhddxea/providers/Microsoft.Network/virtualNetworks/SAP-dev-vnet",
            "location": "eastus",
            "name": "SAP-dev-vnet",
            "resource_group_name": "SAP-dev-RG-ljhddxea",
            "tags": {
              "envirnoment": "dev",
              "owners": "SAP"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.random"
          ]
        }
      ]
    }
  ]
}